# AutoGEN-struct-resp

./: .pdm-python  README.md  first.ipynb  pyproject.toml
