[project]
name = "AutoGEN-struct-resp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abhimanyu Aryan", email = "8083613+AbhimanyuAryan@users.noreply.github.com"},
]
dependencies = [
    "autogen>=0.1.1",
    "python-dotenv>=1.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
